<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="empty_string"></string>	
    <string name="menu_settings">Preference</string>
    <string name="setting">Preference</string>
    <string name="signin">Sign in</string>
    <string name="findBook">Search book when start</string>
    <string name="signin2">Sign up</string>
    <string name="signup">Sign up account</string>
    <string name="txtLoginTiep">Skip sign in</string>
    <string name="signup2">Sign in</string>
    <string name="forgot">Forgot password?</string>
    <string name="buybook">Buy book</string>
    <string name="terms">Terms service</string>	
    <string name="downact">Download</string>
    <string name="mylib">Library</string>
    <string name="main">Biitbook</string>
    <string name="dis">BiitBook Store</string>
    <string name="profile">Profile</string>    
    <string name="bcoin">Charge BCoins</string>
    <string name="cont">Feedback</string>
    <string name="out">Quit</string>
    <string name="back">Back</string>
    <string name="back_label">Previous</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="frist">Last name</string>
    <string name="last">First name</string>
    <string name="lang">Language</string>
    <string name="phai">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
	<string name="expired">You expired read trial</string>	
	<string name="networkerror">Network error. Please try again</string>	
	<string name="yesnoquit">This application will restart. Do you want?</string>
	<string name="reload">Refresh</string>		
	<string name="sendfeed">Send feedback</string>		
	<string name="hotline">Hotline: 84973 889 389</string>		
	<string name="trial">Trial</string>	
	<string name="noyour">Add ebook file into memory or upload ebook to BiitBook.com</string>
	<string name="nobiit">You must sign in to download ebook from BiitBook.com</string>
	<string name="noall">Add ebook file into memory or download ebook from BiitBook.com</string>
	<string name="mustlogin">You must sign in to use this function</string>
	<string name="eng">English</string>
	<string name="vi">Tiếng Việt</string>	
	<string name="lang">Language</string>	
	<string name="system">System</string>	
	<string name="finding">Searching book...</string>	
	<string name="processing">Processing...</string>	
	<string name="notice">Notice</string>	
	<string name="downloaed">Book is exist in your library</string>	
	<string name="buyed">Buy book success</string>	
	<string name="notbcoin">You don\'t enough BCoin to buy book</string>	
	<string name="buyerror">Buy book don\'t success. Please try again</string>	
	<string name="sedelete">Select book to delete</string>	
	<string name="updating">Updating</string>	
	<string name="backagain">Press back again to quit application</string>	
	<string name="dontsent">Can\'t send feedback. Please check network connection</string>		
	<string name="sent">Feedback sent</string>
	<string name="enter">Enter feedback content</string>	
	<string name="logout">Logout</string>	
	<string name="quit">Quit</string>	
	<string name="bcoinn">bcoin</string>	
	<string name="bcoins">bcoins</string>	
	<string name="mags">magazines</string>
	<string name="magn">magazine</string>
	<string name="bookn">book</string>	
	<string name="books">books</string>
	<string name="background">Background</string>	
	<string name="defult">Default</string>	
	<string name="night">Night</string>	
	<string name="bright">Brightness</string>	
	<string name="font">Font</string>	
	<string name="size">Size</string>	
	<string name="loginsuccess">Sign in success</string>	
	<string name="incorrect">Email or password incorrect</string>
	<string name="apperror">Application error. Please try again</string>		
	<string name="signining">Sign in...</string>	
	<string name="enteremail">Enter email</string>	
	<string name="enterpass">Enter password</string>	
	<string name="enterboth">Enter email and password</string>		
	<string name="space">Email and password must don\'t exist space </string>	
	<string name="cantlogin">Can\'t sign in. Please try again</string>		
	<string name="dontexist">This book doesn\'t exist in device. Do you download?</string>	
	<string name="agree">Agree</string>	
	<string name="downerror">Download book error. Please check network and memory</string>	
	<string name="cancel">Cancel</string>		
	<string name="later">Later</string>
	<string name="notexist">This book doesn\'t exist in device</string>	
	<string name="booknotfound">Book not found</string>		
	<string name="bookdelete">Do you remove this book?</string>		
	<string name="bookfail">Delete book fail. Please try again</string>		
	<string name="pleasewait">This book is being download. Please wait</string>
	<string name="downing">Downloading</string>
	<string name="download">Download file</string>	
	<string name="downsuccess">Download success</string>
	<string name="done">Complete</string>		
	<string name="full">Enter information</string>		
	<string name="emailincorrect">Format email incorrect</string>	
	<string name="passincorrect">Password must be at least 6 or more characters</string>		
	<string name="signupsuc">Sign up success</string>	
	<string name="emailexist">Can\'t sign up. Email was used</string>		
	<string name="app_name">Biitbook</string>	
	<string name="deletebook">Delete book</string>
	
	<string name="no_media_warning">Storage media not present</string>
	<string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
	<string name="cancel">Cancel</string>
	<string name="search_backwards">Search backwards</string>
	<string name="search_forwards">Search forwards</string>
	<string name="search_document">Search document</string>
	<string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
	<string name="outline_title">Table of Contents</string>
	<string name="enter_password">Enter password</string>
	<string name="text_not_found">Text not found</string>
	<string name="searching_">Searching&#8230;</string>
	<string name="toggle_links">Highlight and enable links</string>
	<string name="no_further_occurrences_found">No further occurrences found</string>
	<string name="select">Select</string>
	<string name="search">Search</string>
	<string name="copy">Copy</string>
	<string name="strike_out">Strike-out</string>
	<string name="delete">Delete</string>
	<string name="highlight">Highlight</string>
	<string name="underline">Underline</string>
	<string name="edit_annotations">Edit annotations</string>
	<string name="ink">Ink</string>
	<string name="save">Save</string>
	<string name="print">Print</string>
	<string name="dismiss">Dismiss</string>
	<string name="parent_directory">[Up one level]</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="entering_reflow_mode">Entering reflow mode</string>
	<string name="leaving_reflow_mode">Leaving reflow mode</string>
	<string name="print_failed">Print failed</string>
	<string name="select_text">Select text</string>
	<string name="copied_to_clipboard">Copied to clipboard</string>
	<string name="no_text_selected">No text selected</string>
	<string name="draw_annotation">Draw annotation</string>
	<string name="nothing_to_save">Nothing to save</string>
	<string name="document_has_changes_save_them_">Document has changes. Save them?</string>
	<string name="cannot_open_document">Cannot open document</string>
	<string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
	<string name="cannot_open_file_Path">Cannot open file: %1$s</string>
	<string name="cannot_open_buffer">Cannot open buffer</string>
	<string name="fill_out_text_field">Fill out text field</string>
	<string name="okay">Okay</string>
	<string name="choose_value">Choose value</string>
	<string name="not_supported">Not supported</string>
	<string name="copy_text_to_the_clipboard">Copy text to the clipboard</string>
	<string name="more">More</string>
	<string name="accept">Accept</string>
	<string name="copy_text">copy text</string>
	<string name="format_currently_not_supported">Format currently not supported</string>
	<string name="toggle_reflow_mode">Toggle reflow mode</string>
</resources>
