<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/content_frame"
    android:background="@color/myFontColor">

    
    <org.holoeverywhere.widget.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textHome_size"
        android:text="@string/cont"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"     
        android:textColor="@color/spe"
        android:layout_gravity="center_horizontal"/>
    
    <org.holoeverywhere.widget.EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/textHome_size_mini"
        android:textColor="@color/textcolor"
        android:singleLine="false"
        android:lines="8"
        android:id="@+id/conts"
        android:gravity="top"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"     
        android:background="@drawable/conts"/>
		
		<org.holoeverywhere.widget.Button 
        	    android:id="@+id/btnSend"
        	    android:layout_marginRight="5dp"
        		android:layout_marginLeft="5dp"     
        	    android:layout_width="match_parent"
        		android:layout_height="@dimen/btnHome_size"
        		android:layout_marginTop="10dp"        		      		
        		android:textColor="@color/spe"
        		android:textSize="@dimen/textHome_size"        		
        		android:text="@string/sendfeed"/>
		
		<org.holoeverywhere.widget.TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/txtHotline"
	        android:textSize="@dimen/textHome_size"
	        android:text="@string/hotline"
	        android:layout_marginTop="20dp"
	        android:layout_marginRight="5dp"
	        android:layout_marginLeft="5dp"     
	        android:textColor="@color/spe"
	        android:gravity="center_horizontal"/>

</LinearLayout>
