<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout_Buy"> 
            	      
	      <org.holoeverywhere.widget.TextView 
	        android:id="@+id/text_buy_hethan"	        
        	android:layout_width="match_parent"
	        android:layout_height="wrap_content"	        
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"	        
	        android:gravity="center_horizontal"
	        android:textSize="20dp"
	        android:textColor="#AAAAAA"
	        android:text="@string/expired"/>
	<RelativeLayout android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
	    <ImageView
	        android:id="@+id/image_buybook"
	        android:layout_width="@dimen/width_buy"
	        android:layout_height="@dimen/hieght_buy"
	        android:scaleType="fitXY"
	        android:layout_centerInParent="true"/>	   
	</RelativeLayout> 
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:gravity="center_horizontal" 
    	android:background="@color/white">
	<org.holoeverywhere.widget.TextView
	    android:layout_marginTop="10dp"
        android:id="@+id/text_Buy_textNameBook"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="center_horizontal"   
        android:textColor="@color/mautextgrid"
        android:textSize="20dp"/>	
    <org.holoeverywhere.widget.TextView
        android:id="@+id/text_Buy_textAuthor"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"        
        android:singleLine="true"
        android:gravity="center_horizontal" 
        android:textColor="#AAAAAA"
        android:textSize="17dp"/>  	    
	<org.holoeverywhere.widget.Button 
	        android:id="@+id/btn_buy_book"
        	android:layout_width="@dimen/width_buy"
	        android:layout_height="30dp"	        
	        android:background="@color/maunutbuy"
	        android:textColor="@color/textbtnchinh"
	        android:textSize="20dp"
	        android:layout_marginTop="10dp"
	        android:text="@string/buybook" /> 	   
	</LinearLayout>  
	</LinearLayout>
	
    <LinearLayout
	    android:id="@+id/layout_Buybook_Webview"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:orientation="vertical"
        android:background="@color/back_webview">     
        <org.holoeverywhere.widget.ProgressBar
	        android:id="@+id/progressBar_Buy_web"
	        style="?android:attr/progressBarStyleHorizontal"   
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="-8dp"/>    
	        
	      <WebView 
        	android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:id="@+id/webView_Buybook"
	        android:background="@color/white"/>	  	      
	  </LinearLayout>
	  
    <RelativeLayout
	    android:id="@+id/layout_buy_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">        	      
	      <org.holoeverywhere.widget.TextView 
	        android:id="@+id/text_buy_loiweb"
        	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:layout_centerInParent="true"
	        android:text="@string/networkerror"/>	    
	     <org.holoeverywhere.widget.Button 
	         android:id="@+id/btn_buy_retry"
        	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:layout_centerHorizontal="true"
	        android:layout_below="@id/text_buy_loiweb"
	        android:layout_marginTop="5dp"
	        android:text="@string/reload"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp"
	        android:paddingLeft="5dp"
	        android:paddingRight="5dp"/> 	      
	  </RelativeLayout>
</LinearLayout>
